--- a/views/link-sender.ejs
+++ b/views/link-sender.ejs
@@ -9,11 +9,15 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Success Password</title>
+    <title>Check Your Email</title>
   </head>
   <body class="bg-info my-5 d-flex justify-content-center">
-    <div class="container bg-white rounded p3">
-      You success changed your Password ... please log in
+    <div class="container bg-white rounded p-3">
+        <p>
+            Link for reset your password has been sent to your email
+        </p>
+        <h2>Please Check Your Email</h2>
+     
     </div>
   </body>
 </html>
