--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -13,11 +13,18 @@
   </head>
   <body class="bg-info my-5 d-flex justify-content-center">
     <div class="w-50 bg-white rounded p-3">
-      <h3 class="mb-3">Reset Password <% email %></h3>
-      <form action=""  method="post">
-        <label class="form-label" for="Password"> Email </label>
-        <input class="form-control" type="Password" id="Password" name="Password" />
-        <button class="btn btn-primary w100 mt-3" type="submit">Reset Password</button>
+      <h3 class="mb-3">Reset Password <%= email %></h3>
+      <form action="" method="post">
+        <label class="form-label" for="password"> New Password </label>
+        <input
+          class="form-control"
+          type="password"
+          id="password"
+          name="password"
+        />
+        <button class="btn btn-primary w-100 mt-3" type="submit">
+          Reset Password
+        </button>
       </form>
     </div>
   </body>
